--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section class="top-banner">
+    <section class="flexible-contaiener top-banner">
         <div class="half-width">
             <h1>Welcome To</h1>
             <h1><span class="orange-color">Rabiul Islam</span> World!</h1>
@@ -24,7 +24,7 @@
         </div>
     </section>
 
-    <section class="dream-big">
+    <section class="flexible-contaiener dream-big">
         <div class="half-width">
             <img src="images/rabiul-islam-bd.png" alt="">
         </div>
@@ -36,5 +36,20 @@
         </div>
     </section>
 
+    <section class="experience-area">
+        <h2>Experiences</h2>
+        <div class="flexible-contaiener">
+            <div id="full-stack-development" class="experience-item">
+                <h2>Full Stack Web Developer</h2>
+                <h3 class="orange-color">2021-Present | Pro Level Developer</h3>
+                <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+            </div>
+            <div id="baby-web-development" class="experience-item">
+                <h2>Baby Web Developer</h2>
+                <h3 class="orange-color">2020-2021 | Programming Hero Learner</h3>
+                <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
