--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <div class="half-width">
             <h1>Welcome To</h1>
             <h1><span class="orange-color">Rabiul Islam</span> World!</h1>
-            <h3>Build Climber and Train Stopper</h3>
-            <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero.</p>
+            <h3>Full Stack Junior Web Developer</h3>
+            <p>I am Rabiul Islam. I am learning and mastering web development for programming hero. I will not stop until I become the Web Development Hero.</p>
             <a class="link-button" href="#" target="_blank">hire me</a>
         </div>
         <div class="half-width">
@@ -51,5 +51,9 @@
             </div>
         </div>
     </section>
+
+    <footer>
+        <p>© Rabiul Islam 2021, a Programming Hero Learner.</p>
+    </footer>
 </body>
 </html>
